--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "hcodebr/ecommerce",
+    "name": "cristianwilson-77/ecommerce",
     "authors": [
         {
             "name": "Hcode Treinamentos",
